Revert "Merge branch 'dev' into JOH-37/docker"
This reverts commit 5740f100765edd1cba1b5eb15f1299da00da8833, reversing
changes made to 038f269ea8c3de09c89ddee37df5438d0c6aa1e2.
