# src/app/dto/common.dto.go
@@ -67,9 +67,3 @@ type ResponseGatewayTimeoutErr struct {
 	Message    string      `json:"message" example:"Connection timeout"`
 	Data       interface{} `json:"data"`
 }
-
-type ResponseSuccess struct {
-	StatusCode int         `json:"status_code" example:"200"`
-	Message    string      `json:"message" example:"success"`
-	Data       interface{} `json:"data"`
-}
